--- a/index.html
+++ b/index.html
@@ -6,6 +6,13 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>мой сайт</h1>
+    <header>
+        <h1>мой сайт</h1>
+        <ul>
+            <li><a href="#">Main</a></li>
+            <li><a href="#">About us</a></li>
+        </ul>
+    </header>
+
 </body>
 </html>
