--- a/index.html
+++ b/index.html
@@ -13,6 +13,8 @@
             <li><a href="#">About us</a></li>
         </ul>
     </header>
-
+    <main>
+        <h2>subtitle</h2>
+    </main>
 </body>
 </html>
