--- a/index.html
+++ b/index.html
@@ -13,6 +13,8 @@
             <li><a href="#">About us</a></li>
         </ul>
     </header>
-
+<footer>
+    <a href="899988774556">899988774556</a>
+</footer>
 </body>
 </html>
